--- a/flut/pubspec.yaml
+++ b/flut/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flut
+name: ent
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  http: ^0.13.3
 
 
   # The following adds the Cupertino Icons font to your application.
