--- a/flut/windows/runner/Runner.rc
+++ b/flut/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "flut" "\0"
+            VALUE "FileDescription", "ent" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "flut" "\0"
+            VALUE "InternalName", "ent" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "flut.exe" "\0"
-            VALUE "ProductName", "flut" "\0"
+            VALUE "OriginalFilename", "ent.exe" "\0"
+            VALUE "ProductName", "ent" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
