--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg: ^0.22.0
+  flutter_svg: ^2.0.10+1
   url_launcher: ^6.0.12
   icalendar_parser: ^2.0.0
-  intl: ^0.17.0
+  intl: ^0.19.0
   provider: ^6.0.1
 
-  http: ^0.13.3
+  http: ^1.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -54,7 +54,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -73,6 +73,8 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - lib/assets/ISEN-YNCREA-Mediterranee-White.png
+    - lib/assets/ISEN-Engineering-logo.png
+    - lib/assets/ISEN-Repair-logo.png
     - lib/assets/SVG/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
