--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  auto_size_text: ^3.0.0
   flutter_svg: ^2.0.10+1
   url_launcher: ^6.0.12
   icalendar_parser: ^2.0.0
