--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,8 @@ dependencies:
   icalendar_parser: ^2.0.0
   intl: ^0.19.0
   provider: ^6.0.1
-
   http: ^1.2.2
+  path_provider: ^2.0.9
 
 
   # The following adds the Cupertino Icons font to your application.
